# ml-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mltemplate/: __init__.py  cli.py  core.py
src/mltemplate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cli.py  test_core.py
