[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mltemplate"
version = "0.1.0"
description = "ML project template with lint/format/test/CI"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]
ignore = ["E203","E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
